force-app/main/default/objects/RefRecSettings__mdt/RefRecSettings__mdt.object-meta.xml
<CustomObject>
    <label>Referral Recommendations Setting</label>
    <pluralLabel>Referral Recommendations Settings</pluralLabel>
</CustomObject>