force-app/main/default/objects/RefRecSettings__mdt/fields/Default_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Default_Latitude__c</fullName>
    <defaultValue>37.7897</defaultValue>
    <description>Used to find services when no information about the Client&apos;s location is provided.  North is positive latitude, south is negative.</description>
    <inlineHelpText>Used to find services when no information about the Client&apos;s location is provided.  North is positive latitude, south is negative.</inlineHelpText>
    <label>Default Latitude</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>