force-app/main/default/objects/RefRecSettings__mdt/fields/Default_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Default_Longitude__c</fullName>
    <defaultValue>-122.3972</defaultValue>
    <description>Used to find services when no information about the Client&apos;s location is provided.  East is positive longitude, west is negative.</description>
    <inlineHelpText>Used to find services when no information about the Client&apos;s location is provided.  East is positive longitude, west is negative.</inlineHelpText>
    <label>Default Longitude</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>