force-app/main/default/objects/RefRecSettings__mdt/fields/Default_Max_Distance__c.field-meta.xml
<CustomField>
    <fullName>Default_Max_Distance__c</fullName>
    <defaultValue>25</defaultValue>
    <description>In miles, how far from the client or default location should a search extend</description>
    <inlineHelpText>In miles, how far from the client or default location should a search extend</inlineHelpText>
    <label>Default Max Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>