force-app/main/default/objects/RefRecSettings__mdt/fields/Recommendations_Email_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Email_Service_Address__c</fullName>
    <description>Enter the email address created for the Email Service associated with the RecommendationsInboundEmailHandler</description>
    <inlineHelpText>Enter the email address created for the Email Service associated with the RecommendationsInboundEmailHandler</inlineHelpText>
    <label>Recommendations Email Service Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>